@@ -1,3 +1,15 @@
+2011-11-02  Filip Pizlo  <fpizlo@apple.com>
+
+        Inlined uses of the global object should use the right global object
+        https://bugs.webkit.org/show_bug.cgi?id=71427
+
+        Reviewed by Oliver Hunt.
+
+        * dfg/DFGJITCompiler.h:
+        (JSC::DFG::JITCompiler::globalObjectFor):
+        * dfg/DFGSpeculativeJIT64.cpp:
+        (JSC::DFG::SpeculativeJIT::compile):
+
 2011-11-02  Yuqiang Xian  <yuqiang.xian@intel.com>
 
         Remove some unnecessary loads/stores in DFG JIT 32_64
